addons/care_config_relaunch_v2/static/src/css/care_relaunch_v2.css
/* ... */
#products_grid > table > tbody > tr > td.oe_product.oe_grid {
    padding: 1rem;
}

td.oe_product.oe_grid.oe-height-2 {
    height: 552px !important;
}

@media (max-width: 768px) {
    #products_grid .oe_product_cart {
        height: 552px !important;
    }
}

div.oe_product_cart {
    background-color: #EEE9E5;
    border-radius: 10px;
    padding: 2rem;
}

#products_grid td.oe_product.oe_grid section {
    background-color: transparent;
    padding: 2rem;
    height: 300px;
    justify-content: start;
}

#products_grid td.oe_product.oe_grid section h5 {
    word-break: break-word;
}

#products_grid td.oe_product.oe_grid section h5 a {
    font-family: 'Merriweather';
    font-size: 30px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.2;
    letter-spacing: normal;
    color: #222;
    text-decoration: none;
}

#products_grid div.text-info.oe_subdescription div {
    font-family: 'Fira Sans Condensed';
    font-size: 18px;
    font-weight: normal;
    font-stretch: condensed;
    font-style: normal;
    line-height: 1.44;
    letter-spacing: normal;
    color: #222;
}

div#products_grid_before {
    width: 100%;
    padding: 30px !important;
    box-shadow: none;
    float: left !important;
}

div#products_grid {
    width: 100%;
}

#products_grid > table > tbody > tr > td > div > form > div > div.wrap_wsd_1 > div.wrap_wsd_2.front > div > a > img {
    width: 100%;
    max-width: 170px;
    max-height: auto !important;
    height: auto;
}

#products_grid .oe_product .oe_product_image {
    top: 35px;
    border-radius: 50%;
    top: 50px;
    left: calc(50% - 170px / 2);
    width: 170px !important;
    height: 170px !important;
    background-color: #5A4941;
}

div.oe_product_image:after {
    background-image: none;
}

#products_grid div.quick_add_to_cart {
    width: calc(100% - 4rem);
    position: absolute;
    left: 2rem;
    bottom: 2rem;
}

#products_grid div.quick_add_to_cart a {
    display: block;
    background-color: #e36f1e;
    color: white;
    text-shadow: none;
    padding: 7px !important;
    margin-left: 5px;
    margin-right: 5px;
}

#products_grid .oe_product section {
    overflow: visible;
}

#products_grid .oe_product .product_price {
    position: absolute;
    top: -210px;
    left: calc(50% + 25px);
}

#products_grid .oe_product .product_price {
    position: absolute;
    display: block;
    width: 70px;
    height: 70px;
    border-radius: 50%;
    text-align: center;
    background-color: #e36f1e;
    color: white;
    margin: 0;
    padding: 0;
}

#products_grid .oe_product .product_price span {
    position: absolute;
    right: 0;
    top: 5px;
    display: block;
    width: 70px;
    text-align: center;
    font-family: 'Merriweather';
    font-size: 11px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    letter-spacing: -1.1px;
    color: white;
}

#products_grid .oe_currency_value {
    color: white;
}

#products_grid .oe_product .product_price span span {
    position: relative;
    display: inline-block;
    width: fit-content;
    top: 15px;
    right: -2px;
    font-size: 22px;
    letter-spacing: -2.2px;
}

/* PRODUCT CARDS AND GRID END */

/* FORM REDESIGN START */

/* Hide product image and header */
#website_sale_donate img.product-image,
#website_sale_donate h1 {
    display: none;
}

/* Reorder elements */

div.js_product {
    display: grid;
}

h3.amount_title {
    order: -2;
}

div.js_product h4#payment_intervals {
    order: -1;
    padding: 0 !important;
}

#payment_intervals > div > select {
    padding-left: 8px !important;
}

div.js_product div.text-left {
    display: grid;
}

div.wsd_opc_payment {
    order: -1;
}

/* Fix headline spacing and indentation */

h3.amount_title,
h3.checkout_title,
h3.payment_title {
    margin-bottom: 0 !important;
    margin-left: 0 !important;
    padding-left: 0;
}

#products_grid_before > h3 {
    margin-bottom: 36px !important;
}

#products_grid_before h3.small_cart_header a {
    text-decoration: none;
}

#products_grid_before h3.small_cart_header a i.fa.fa-shopping-cart {
    display: none;
}

/* Counter graphics */
body {
  counter-reset: section;
  counter-increment: section; /* start counter at 2, the parent website renders the first */
}

#website_sale_donate h3 {
    font-weight: bold;
    font-size: 18px;
    color: black;
    background: transparent;
}

section[name="one-page-checkout"] h3 {
    margin-bottom: 15px !important;
}

section[name="one-page-checkout"] h3,
section[name="one-page-checkout"] h3 > span,
#products_grid_before .small_cart_header,
#products_grid_before .small_cart_header span {
    font-family: 'Merriweather';
    font-weight: bold;
    font-size: 42px;
    background: transparent !important;
    padding-left: 0 !important;
    padding-right: 0 !important;
}

#website_sale_donate h3:before {
    counter-increment: section;
    /* content: counter(section); do not use real counter, due to CSS order, it's counted wrong */
    margin-right: 1rem;
    background-color: #E36F1E;
    color: white;
    display: inline-block;
    text-align: center;
    line-height: 28px;
    border-radius: 14px;
    width: 28px;
    height: 28px;
    font-size: 14px;
}

#wsd-checkout-box h3.amount_title:before { content: "2"; }
#wsd-checkout-box h3.payment_title:before { content: "3"; }
#wsd-checkout-box h3.checkout_title:before { content: "4"; }

/* Suggested price boxes - OPC forms */

.arbitrary_price.form-inline {
    font-size: 0;
}

span.price_donate_suggested_outer {
    display: inline-block;
    margin: 0 !important;
    padding: 0 !important;
    width: 50%;
    background-color: transparent;
}
/* ... */

